
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
struct epoll_event {int events; } ;


 int EPOLLIN ;
 int EPOLL_CTL_ADD ;
 int SIZE ;
 int epoll_create (int) ;
 int epoll_ctl (int,int ,int,struct epoll_event*) ;
 int gettimeofday (struct timeval*,int *) ;
 int perror (char*) ;
 int printf (char*,scalar_t__) ;

int main(void) {

 int links[SIZE];
 int links2[SIZE];
 int links3[SIZE];
 int links4[SIZE];
 int i, j;
 int ret;
 int ep1, ep2;
 struct timeval start, end;

 struct epoll_event evt = {
  .events = EPOLLIN
 };

 ep1 = epoll_create(1);
 for (i = 0; i < SIZE; i++) {
  links[i] = epoll_create(1);
  ret = epoll_ctl(ep1, EPOLL_CTL_ADD, links[i], &evt);
  if (ret)
   perror("error 1");
 }
 for (i = 0; i < SIZE; i++) {
  links2[i] = epoll_create(1);
  for (j = 0; j < SIZE; j++) {
   epoll_ctl(links[j], EPOLL_CTL_ADD, links2[i], &evt);
   if (ret)
    perror("error 2");
  }
 }
 for (i = 0; i < SIZE; i++) {
  links3[i] = epoll_create(1);
  for (j = 0; j < SIZE; j++) {
   epoll_ctl(links2[j], EPOLL_CTL_ADD, links3[i], &evt);
   if (ret)
    perror("error 3");
  }
 }
 for (i = 0; i < SIZE; i++) {
  links4[i] = epoll_create(1);
  for (j = 0; j < SIZE; j++) {
   epoll_ctl(links3[j], EPOLL_CTL_ADD, links4[i], &evt);
   if (ret)
    perror("error 4");
  }
 }

  ep2 = epoll_create(1);
 gettimeofday(&start, ((void*)0));
 ret = epoll_ctl(ep2, EPOLL_CTL_ADD, ep1, &evt);


 if (ret)
  perror("error 5");
 gettimeofday(&end, ((void*)0));

 printf("%ld\n", ((end.tv_sec * 1000000 + end.tv_usec)
  - (start.tv_sec * 1000000 + start.tv_usec)));

 return 0;

}
